--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 </head>
 <body>
     <h1>Bitte entnehmen Sie von Stapel 1 den Kontaktdatenbogen und füllen Sie diesen aus. Wenn sie dies getan haben gehen Sie bitte zurück auf die Startseite.</h1>
-
+    <img src="bild.png" alt="ZeTT-Logo">
 </body>
 </html>
